# langchain-agent-example

./: .editorconfig  .gitignore  README.md  api.py  cli.py  main.py  package.json  pyproject.toml  setup.sh
app/: agents.py  query.py  settings.py  sql_helper.py
docs/demo/: Demo_Vue_FastAPI_Langchain.ts
frontend/src/: App.vue
frontend/src/components/: ChatView.vue
frontend/src/router/: index.js
frontend/src/services/: apiService.js
frontend/src/views/: ChatBot.vue
templates/: chatbot.html
tools-example/: ReadMe.md  main.py  student_data.db
